test/invalid/invalid_identifiers.ml
1xas2 <- 10
d2zx. <- 3
123.zsda <- 1
._123asd <- 0